<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo_degrade"
    tools:context="br.com.rmit.salesreps.activity.CadastroActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="172dp"
        android:layout_height="144dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/texto_novo_usuario"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/usuario" />

    <EditText
        android:id="@+id/text_usuario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/fundo_caixa_texto"
        android:backgroundTint="@android:color/background_light"
        android:ems="10"
        android:hint="@string/texto_digite_usuario"
        android:inputType="textPersonName"
        android:padding="16dp"
        android:textColor="@android:color/background_light"
        android:textColorHint="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.100000024" />

    <Button
        android:id="@+id/button_cadastrar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/fundo_botao"
        android:text="@string/botao_cadastro"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/text_senha"
        app:layout_constraintVertical_bias="0.26" />

    <TextView
        android:id="@+id/text_conta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:onClick="abrirLoginUsuario"
        android:text="@string/text_conta"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_cadastrar"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/text_senha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/fundo_caixa_texto"
        android:padding="16dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@android:color/background_light"
        android:ems="10"
        android:hint="@string/text_digite_senha"
        android:inputType="textPassword"
        android:textColor="@android:color/background_light"
        android:textColorHint="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_email"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/text_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/fundo_caixa_texto"
        android:padding="16dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@android:color/background_light"
        android:ems="10"
        android:hint="@string/texto_email"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/background_light"
        android:textColorHint="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_usuario"
        app:layout_constraintVertical_bias="0.0" />
</android.support.constraint.ConstraintLayout>
