<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo_degrade"
    tools:context="br.com.rmit.salesreps.activity.LoginActivity">

    <EditText
        android:id="@+id/text_usuario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/fundo_caixa_texto"
        android:backgroundTint="@android:color/background_light"
        android:ems="10"
        android:hint="@string/texto_digite_usuario"
        android:inputType="textPersonName"
        android:padding="16dp"
        android:textColor="@android:color/background_light"
        android:textColorHint="@android:color/background_light"
        android:textColorLink="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/image_magazine"
        app:layout_constraintVertical_bias="0.134" />

    <Button
        android:id="@+id/button_logar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/fundo_botao"
        android:text="@string/botao_logar"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/text_senha"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/text_conta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        android:onClick="abrirCadastroUsuario"
        android:text="@string/text_nao_tem_conta"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_logar"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/text_senha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/fundo_caixa_texto"
        android:backgroundTint="@android:color/background_light"
        android:ems="10"
        android:hint="@string/text_digite_senha"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColor="@android:color/background_light"
        android:textColorHint="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_usuario"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/image_magazine"
        android:layout_width="321dp"
        android:layout_height="126dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="45dp"
        android:contentDescription="@string/texto_magazine"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/maga_logo_branco"
        app:layout_constraintHorizontal_bias="0.51" />
</android.support.constraint.ConstraintLayout>
